clusters/k3d-test/kube-system/traefik/traefik-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: ClusterIP
  ports:
  - name: traefik
    port: 9000
    targetPort: traefik
    protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "traefik-dashboard"
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: traefik.testsite.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
          # - path: /api
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: traefik-dashboard
          #       port:
          #         number: 9000
